removed ae extra dependencies.